# rules-dotnet-repro

./: .gitignore  BUILD.bazel  Program.cs  WORKSPACE.bazel  paket.dependencies  paket.main.bzl
